...
    
    let firstnameRow = NameRow { row in
      row.add(rule: RuleRequired(msg: "• First name must be filled in"))
      row.validationOptions = .validatesAlways
      row.title = "Worker Name"
      row.value = firstname
      row.placeholder = "John"
    }.onChange { (row) in
      self.tempory?.firstname = row.value ?? ""
      onChange()
    }.cellUpdate { (cell, _) in
      cell.textField.clearButtonMode = .whileEditing
    }.onRowValidationChanged { (cell, row) in
...
      }
    }
    
    let lastnameRow = NameRow { row in
      row.title = "Worker Surname"
      row.value = lastname
      row.placeholder = "Appleseed"
    }.onChange { (row) in
      self.tempory?.lastname = row.value ?? ""
      onChange()
    }.cellUpdate { (cell, _) in
      cell.textField.clearButtonMode = .whileEditing
    }
...
    }.onChange { row in
      self.tempory?.details = row.value ?? ""
      onChange()
    }
    
    let deleteWorkerRow = ButtonRow { row in
      row.title = "Delete Worker"
    }.onCellSelection { (_, _) in
      let alert = SCLAlertView(appearance: .warningAppearance)
      alert.addButton("Cancel", action: {})
      alert.addButton("Delete") {
        HarvestDB.delete(worker: self) { (_, _) in
          formVC.navigationController?.popViewController(animated: true)
...
        return notUnique ? ValidationError(msg: "• Farm names must be unique") : nil
      }
      row.add(rule: RuleRequired(msg: "• Farm names must be filled in"))
      row.add(rule: uniqueNameRule)
      row.title = "Farm Name"
      row.value = name
      row.placeholder = "Name of the farm"
    }.onChange { row in
      self.tempory?.name = row.value ?? ""
      onChange()
    }.cellUpdate { (cell, _) in
      cell.textField.clearButtonMode = .whileEditing
    }.onRowValidationChanged { (cell, row) in
...
      }
    }
    
    let companyRow = NameRow { row in
      row.title = "Company Name"
      row.value = companyName
      row.placeholder = "Name of the company"
    }.onChange { row in
      self.tempory?.companyName = row.value ?? ""
      onChange()
    }.cellUpdate { (cell, _) in
      cell.textField.clearButtonMode = .whileEditing
    }
    
    let emailRow = EmailRow { row in
      row.title = "Farm Email"
      row.value = email
      row.placeholder = "Farms email address"
    }.onChange { row in
      self.tempory?.email = row.value ?? ""
      onChange()
    }.cellUpdate { (cell, _) in
...
      if orchard.assignedFarm == id, id != "" {
        orchardsSection <<< oRow
      }
    }
    
    let deleteFarmRow = ButtonRow { row in
      row.title = "Delete Farm"
    }.onCellSelection { (_, _) in
      let alert = SCLAlertView(appearance: .warningAppearance)
      alert.addButton("Cancel", action: {})
      alert.addButton("Delete") {
        HarvestDB.delete(farm: self) { (_, _) in
          formVC.navigationController?.popViewController(animated: true)
...
        return notUnique ? ValidationError(msg: "• Orchard names in the same farm must have different names.") : nil
      }
      row.add(rule: RuleRequired(msg: "• Orchard names must be filled in"))
      row.add(rule: uniqueNameRule)
      row.title = "Orchard Name"
      row.value = name
      row.placeholder = "Name of the orchard"
    }.onChange { row in
      self.tempory?.name = row.value ?? ""
      onChange()
    }.cellUpdate { (cell, _) in
      cell.textField.clearButtonMode = .whileEditing
    }.onRowValidationChanged { (cell, row) in
...
      var newStat = stat
      newStat.ids = [self.id]
      performanceSection <<< formVC.prebuiltGraph(title: stat.name, stat: newStat)
    }
    
    let deleteOrchardRow = ButtonRow { row in
      row.title = "Delete Orchard"
    }.onCellSelection { (_, _) in
      let alert = SCLAlertView(appearance: .warningAppearance)
      
      alert.addButton("Cancel", action: {})
      alert.addButton("Delete") {
        HarvestDB.delete(orchard: self) { (_, _) in
...
