...
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <subviews>
                                                <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Hand" translatesAutoresizingMaskIntoConstraints="NO" id="mjA-AY-6G0">
                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="143"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Don't Have An Account?">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="xaf-iG-9SP">
                                                    <rect key="frame" x="0.0" y="8" width="342" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
...
                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" textContentType="email"/>
                                                </textField>
                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="R87-SE-52j">
                                                    <rect key="frame" x="0.0" y="46" width="342" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
...
                                            <color key="backgroundColor" red="0.16290088820000001" green="0.72999999999999998" blue="0.36074126299999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                            <state key="normal" title="Log in with Harvest">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </state>
...
            <objects>
                <navigationController storyboardIdentifier="settingsViewController" title="SettingsNavCon" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vND-wI-MtW" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="Settings" id="i44-ev-d3M"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="00C-Y5-g8b">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
...
            <objects>
                <navigationController storyboardIdentifier="informationViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="P1R-gw-ymn" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Infomation" image="Infomation" id="QhI-wQ-ho6"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wGa-NH-LJN">
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Title" id="xBX-qF-BND">
                        <barButtonItem key="rightBarButtonItem" title="New" id="huK-nP-j0R">
                            <connections>
                                <action selector="newButtonTouchUp:" destination="GXM-Pb-AvJ" id="Uxi-n5-xp7"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="sHH-Xw-rQH">
                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Save" id="rtm-UZ-IuW">
                            <connections>
                                <action selector="saveButtonTouchUp:" destination="s2o-6U-1Nl" id="uC0-or-tOk"/>
...
