...
      ["lat": 0.1, "lng": 0.0],
      ["lat": 2.0, "lng": 2.0]
    ],
    "farm": "A2"
  ]
  
  let farm1: JSON = [
    "name": "farm1"
  ]
  
  let farm2: JSON = [
    "name": "farm2"
  ]
...
