//
//  HarvestEntityAuth.swift
//  HarvestUITests
//
//  Created by Letanyan Arumugam on 2018/07/19.
//  Copyright © 2018 University of Pretoria. All rights reserved.
//

// swiftlint:disable line_length
// swiftlint:disable function_body_length

import XCTest

class HarvestEntityAuth: XCTestCase {
  
  override func setUp() {
    super.setUp()
    
    // Put setup code here. This method is called before the invocation of each test method in the class.
    
    // In UI tests it is usually best to stop immediately when a failure occurs.
    continueAfterFailure = false
    // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
    XCUIApplication().launch()
    
    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
  }
  
  override func tearDown() {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
    super.tearDown()
  }
  
  func test0SignOut() {
    XCUIDevice.shared.orientation = .portrait
    let app = XCUIApplication()
    let settings = app.tabBars.buttons["Settings"]
    
    if settings.exists {
      settings.tap()
      app.tables/*@START_MENU_TOKEN@*/.staticTexts["Logout"]/*[[".cells.staticTexts[\"Logout\"]",".staticTexts[\"Logout\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
    }
  }
  
  func test1LogIn() {
    XCUIDevice.shared.orientation = .portrait
    let app = XCUIApplication()
    
    if app.buttons["Don't Have An Account?"].exists {
      
      let app2 = app
      let app = app2
      app.images["Hand"].tap()
      app.textFields["Email"].tap()
      
      let iKey = app2/*@START_MENU_TOKEN@*/.keys["i"]/*[[".keyboards.keys[\"i\"]",".keys[\"i\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
      iKey.tap()
      
      let oKey = app2/*@START_MENU_TOKEN@*/.keys["o"]/*[[".keyboards.keys[\"o\"]",".keys[\"o\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
      oKey.tap()
      
      let sKey = app2/*@START_MENU_TOKEN@*/.keys["s"]/*[[".keyboards.keys[\"s\"]",".keys[\"s\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
      sKey.tap()
      
      let tKey = app2/*@START_MENU_TOKEN@*/.keys["t"]/*[[".keyboards.keys[\"t\"]",".keys[\"t\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
      tKey.tap()
      
      let eKey = app2/*@START_MENU_TOKEN@*/.keys["e"]/*[[".keyboards.keys[\"e\"]",".keys[\"e\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
      eKey.tap()
      sKey.tap()
      tKey.tap()
      eKey.tap()
      
      let rKey = app2/*@START_MENU_TOKEN@*/.keys["r"]/*[[".keyboards.keys[\"r\"]",".keys[\"r\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
      rKey.tap()
      app2/*@START_MENU_TOKEN@*/.keys["@"]/*[[".keyboards.keys[\"@\"]",".keys[\"@\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
      app2/*@START_MENU_TOKEN@*/.keys["h"]/*[[".keyboards.keys[\"h\"]",".keys[\"h\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
      let aKey = app2.keys["a"]
      app2/*@START_MENU_TOKEN@*/.keys["a"]/*[[".keyboards.keys[\"a\"]",".keys[\"a\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
      rKey.tap()
      app2/*@START_MENU_TOKEN@*/.keys["v"]/*[[".keyboards.keys[\"v\"]",".keys[\"v\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
      eKey.tap()
      sKey.tap()
      tKey.tap()
      aKey.tap()
      let pKey = app2.keys["p"]
      pKey.tap()
      pKey.tap()
      
      let key = app2/*@START_MENU_TOKEN@*/.keys["."]/*[[".keyboards.keys[\".\"]",".keys[\".\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
      key.tap()
      app2/*@START_MENU_TOKEN@*/.keys["c"]/*[[".keyboards.keys[\"c\"]",".keys[\"c\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
      oKey.tap()
      key.tap()
      
      let zKey = app2.keys["z"]
      zKey.tap()
      aKey.tap()
      
      app.secureTextFields["Password"].tap()
      XCUIDevice.shared.orientation = .faceUp
      
      let moreKey = app2/*@START_MENU_TOKEN@*/.keys["more"]/*[[".keyboards",".keys[\"more, numbers\"]",".keys[\"more\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/
      moreKey.tap()
      
      let key2 = app2/*@START_MENU_TOKEN@*/.keys["0"]/*[[".keyboards.keys[\"0\"]",".keys[\"0\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
      key2.tap()
      key2.tap()
      key2.tap()
      key2.tap()
      key2.tap()
      key2.tap()
      app.buttons["Log in with Harvest"].tap()
      
      XCUIApplication().tabBars.buttons["Settings"].tap()
    }
  }
  
}
